@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2017, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2018, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,9 +25,10 @@ import com.hazelcast.map.impl.operation.GetOperation;
 import com.hazelcast.nio.Packet;
 import com.hazelcast.spi.impl.operationservice.impl.DummyOperation;
 import com.hazelcast.spi.impl.operationservice.impl.operations.Backup;
+import com.hazelcast.spi.properties.GroupProperty;
 import com.hazelcast.test.AssertTask;
 import com.hazelcast.test.HazelcastSerialClassRunner;
-import com.hazelcast.test.annotation.QuickTest;
+import com.hazelcast.test.annotation.SlowTest;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -37,31 +38,32 @@ import org.junit.runner.RunWith;
 import static org.junit.Assert.assertEquals;
 
 /**
- * This test can't run with test-hazelcast instances since we rely on a real TcpIpConnectionManager.
+ * This test can't run with mocked Hazelcast instances, since we rely on a real TcpIpConnectionManager.
  */
 @RunWith(HazelcastSerialClassRunner.class)
-@Category(QuickTest.class)
+@Category(SlowTest.class)
 public class OverloadedConnectionsPluginTest extends AbstractDiagnosticsPluginTest {
 
-    private OverloadedConnectionsPlugin plugin;
     private HazelcastInstance local;
-    private HazelcastInstance remote;
-    private volatile boolean stop;
-    private String remoteKey;
     private InternalSerializationService serializationService;
+    private OverloadedConnectionsPlugin plugin;
+    private String remoteKey;
+
+    private volatile boolean stop;
 
     @Before
-    public void setup() throws InterruptedException {
+    public void setup() {
         Hazelcast.shutdownAll();
 
         Config config = new Config()
                 .setProperty(OverloadedConnectionsPlugin.PERIOD_SECONDS.getName(), "1")
                 .setProperty(OverloadedConnectionsPlugin.SAMPLES.getName(), "10")
-                .setProperty(OverloadedConnectionsPlugin.THRESHOLD.getName(), "10");
+                .setProperty(OverloadedConnectionsPlugin.THRESHOLD.getName(), "2")
+                .setProperty(GroupProperty.IO_OUTPUT_THREAD_COUNT.getName(), "1");
 
         local = Hazelcast.newHazelcastInstance(config);
         serializationService = getSerializationService(local);
-        remote = Hazelcast.newHazelcastInstance(config);
+        HazelcastInstance remote = Hazelcast.newHazelcastInstance(config);
 
         plugin = new OverloadedConnectionsPlugin(getNodeEngineImpl(local));
         plugin.onStart();
@@ -81,7 +83,7 @@ public class OverloadedConnectionsPluginTest extends AbstractDiagnosticsPluginTe
         spawn(new Runnable() {
             @Override
             public void run() {
-                IMap map = local.getMap("foo");
+                IMap<String, String> map = local.getMap("foo");
                 while (!stop) {
                     map.getAsync(remoteKey);
                 }
@@ -90,7 +92,7 @@ public class OverloadedConnectionsPluginTest extends AbstractDiagnosticsPluginTe
 
         assertTrueEventually(new AssertTask() {
             @Override
-            public void run() throws Exception {
+            public void run() {
                 plugin.run(logWriter);
 
                 assertContains(GetOperation.class.getSimpleName() + " sampleCount=");
@@ -99,9 +101,10 @@ public class OverloadedConnectionsPluginTest extends AbstractDiagnosticsPluginTe
     }
 
     @Test
+    @SuppressWarnings("UnnecessaryBoxing")
     public void toKey() {
         assertToKey(DummyOperation.class.getName(), new DummyOperation());
-        assertToKey(Integer.class.getName(), new Integer(10));
+        assertToKey(Integer.class.getName(), Integer.valueOf(10));
         assertToKey("Backup(" + DummyOperation.class.getName() + ")",
                 new Backup(new DummyOperation(), getAddress(local), new long[0], true));
     }
